# FRD-to-IR-Converter

./: .gitignore  Cargo.toml  LICENSE  Packager.toml  README.md  build.rs
.github/workflows/: deployment.yml
assets/: icon.icns
assets/Untitled.icon/: icon.json
scripts/: build-msix-packager.ps1  build-msix.ps1  build-msix.rs  create_ico.py  fill_missing.py  generate_licenses_html.py  resize-assets.sh
src/: main.rs  signal.rs
wix/: main.wxs
